<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionDetailActivity">

    <TextView
        android:id="@+id/questionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_id"
        android:layout_marginTop="30dp"
        android:textColor="#101010"

        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@id/questionId"
        android:text="@string/question_title"
        android:textColor="#101010"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/questionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/question_description"
        android:textColor="#101010"
        android:textSize="18sp"
        android:layout_below="@id/questionTitle"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/questionBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question_body"
        android:layout_marginStart="5dp"
        android:textColor="#151515"
        android:layout_below="@id/questionDescription"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/questionPostedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/posted_by"
        android:textColor="#151515"
        android:textStyle="bold"
        android:layout_below="@id/questionBody"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/questionPostedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/posted_at"
        android:layout_marginStart="290dp"
        android:textColor="#151515"
        android:textStyle="bold"
        android:layout_below="@id/questionBody"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:id="@+id/addAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:text="@string/add_answer"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/questionPostedAt"
        android:textColor="@color/cardview_shadow_end_color"
        tools:ignore="PrivateResource" />

</RelativeLayout>